@@ -8,15 +8,19 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.fpl.enums.JudicialMessageRoleType;
+import uk.gov.hmcts.reform.fpl.enums.OrganisationalRole;
 import uk.gov.hmcts.reform.fpl.model.CaseData;
+import uk.gov.hmcts.reform.fpl.model.common.dynamic.DynamicListElement;
 import uk.gov.hmcts.reform.fpl.model.event.MessageJudgeEventData;
 import uk.gov.hmcts.reform.fpl.model.judicialmessage.JudicialMessage;
 import uk.gov.hmcts.reform.fpl.model.judicialmessage.JudicialMessageMetaData;
 import uk.gov.hmcts.reform.fpl.service.IdentityService;
+import uk.gov.hmcts.reform.fpl.service.RoleAssignmentService;
 import uk.gov.hmcts.reform.fpl.service.UserService;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -29,7 +33,7 @@ import static uk.gov.hmcts.reform.fpl.utils.TestDataHelper.buildDynamicList;
 
 @WebMvcTest(MessageJudgeController.class)
 @OverrideAutoConfiguration(enabled = true)
-class MessageJudgeControllerAboutToSubmitTest extends AbstractCallbackTest {
+class MessageJudgeControllerAboutToSubmitTest extends MessageJudgeControllerAbstractTest {
     private static final JudicialMessageRoleType SENDER_TYPE = JudicialMessageRoleType.LOCAL_COURT_ADMIN;
     private static final JudicialMessageRoleType RECIPIENT_TYPE = JudicialMessageRoleType.OTHER;
     private static final String SENDER = "ben@fpla.com";
@@ -47,8 +51,13 @@ class MessageJudgeControllerAboutToSubmitTest extends AbstractCallbackTest {
     @MockBean
     private UserService userService;
 
+    @MockBean
+    private RoleAssignmentService roleAssignmentService;
+
     @Test
     void shouldAddNewJudicialMessageAndSortIntoExistingJudicialMessageList() {
+        when(userService.getOrgRoles()).thenReturn(Set.of(OrganisationalRole.LOCAL_COURT_ADMIN));
+
         JudicialMessage oldJudicialMessage = JudicialMessage.builder()
             .updatedTime(now().minusDays(1))
             .build();
@@ -58,8 +67,12 @@ class MessageJudgeControllerAboutToSubmitTest extends AbstractCallbackTest {
             .judicialMessageNote(MESSAGE)
             .judicialMessageMetaData(JudicialMessageMetaData.builder()
                 .urgency("High urgency")
+                .recipientDynamicList(buildRecipientDynamicListNoJudges().toBuilder()
+                    .value(DynamicListElement.builder()
+                        .code(RECIPIENT_TYPE.toString())
+                        .build())
+                    .build())
                 .recipient(MESSAGE_RECIPIENT)
-                .recipientType(RECIPIENT_TYPE)
                 .sender(SENDER)
                 .senderType(SENDER_TYPE)
                 .build())
@@ -80,12 +93,14 @@ class MessageJudgeControllerAboutToSubmitTest extends AbstractCallbackTest {
             .dateSent(formatLocalDateTimeBaseUsingFormat(now(), DATE_TIME_AT))
             .updatedTime(now())
             .status(OPEN)
-            .recipient(MESSAGE_RECIPIENT)
             .recipientType(RECIPIENT_TYPE)
+            .recipient(MESSAGE_RECIPIENT)
             .latestMessage(MESSAGE)
             .sender(SENDER)
             .senderType(SENDER_TYPE)
-            .messageHistory(String.format("%s - %s", SENDER, MESSAGE))
+            .fromLabel("%s (%s)".formatted(SENDER_TYPE.getLabel(), SENDER))
+            .toLabel("%s (%s)".formatted(RECIPIENT_TYPE.getLabel(), MESSAGE_RECIPIENT))
+            .messageHistory(String.format("%s (%s) - %s", SENDER_TYPE.getLabel(), SENDER, MESSAGE))
             .urgency("High urgency")
             .build();
 
@@ -110,12 +125,17 @@ class MessageJudgeControllerAboutToSubmitTest extends AbstractCallbackTest {
                 Map.entry("relatedDocumentsLabel", "some data"),
                 Map.entry("nextHearingLabel", "some data"),
                 Map.entry("judicialMessageMetaData", JudicialMessageMetaData.builder()
-                    .recipient("some data")
+                        .recipientDynamicList(buildRecipientDynamicListNoJudges().toBuilder()
+                            .value(DynamicListElement.builder()
+                                .code(RECIPIENT_TYPE.toString())
+                                .build())
+                            .build())
                     .sender("some data")
                     .urgency("some data")
                     .build()),
                 Map.entry("judicialMessageNote", "some data"),
-                Map.entry("judicialMessageReply", JudicialMessage.builder().build())
+                Map.entry("judicialMessageReply", JudicialMessage.builder().build()),
+                Map.entry("isSendingEmailsInCourt", "YES")
             ))
             .build();
 
@@ -132,7 +152,8 @@ class MessageJudgeControllerAboutToSubmitTest extends AbstractCallbackTest {
             "nextHearingLabel",
             "judicialMessageMetaData",
             "judicialMessageNote",
-            "judicialMessageReply"
+            "judicialMessageReply",
+            "isSendingEmailsInCourt"
         );
     }
 }
